syntax = "proto3"; // protobuf version

/**
 * 현재 경로 설정
 * 아래 명령어를 통해 server 폴더에 go.mod 모듈 생성 가능
 * go mod init github.com/channel-io/grpc-study
 */
option go_package = "github.com/channel-io/grpc-study/proto";

package product;

service ProductInfo {
  rpc addProduct(Product) returns (ProductID);
  rpc getProduct(ProductID) returns (Product);
}

message Product {
  string id = 1;
  string name = 2;
  string description = 3;
  float price = 4;
}

message ProductID {
  string value = 1;
}
